<resources>
    <string name="app_name">Colloquium</string>
    <string name="employee_login_button_title">Соискатель</string>
    <string name="hr_login_button_title">Сотрудник компании</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_activity_title">Назад</string>
    <string name="register_activity_title">Назад</string>
    <string name="main_screen_activity_title">На стартовую страницу</string>
    <string name="employee_login_screen_description">Страница авторизации соискателя</string>
    <string name="hr_login_screen_description">Страница авторизации сотрудника компании</string>
    <string name="email_hint">Email</string>
    <string name="login_title">Войти</string>
    <string name="register_title">Регистрация</string>
    <string name="not_registered_title">Еще не зарегестрированы?</string>
    <string name="name_hint">Имя</string>
    <string name="family_hint">Фамилия</string>
    <string name="password_hint">Пароль</string>
    <string name="password_confirm_hint">Повторите пароль</string>
    <string name="organization_name_hint">Название организации</string>
    <string name="city_hint">Город</string>
    <string name="vacancy_hint">Вакансия</string>
    <string name="search_title">Поиск</string>
    <string name="detailed_vacancy_activity_title">Назад</string>
    <string name="telephone_contact_list_item_label">• Телефон:</string>
    <string name="email_contact_list_item_label">• Email:</string>
    <string name="address_contact_list_item_label">• Адрес:</string>
    <string name="description">Должностные обязанности заключаются в следующем: \n\t•Создание мобильных приложений \n\t•Использование Git \n\t•Применение JIRA</string>
    <string name="requirements">\t•Уверенное знание языка Java\n\t•Опыт использования Gradle\n\t•Знание Docker, CI, Espresso</string>
    <string name="advices">\t•Нам нравятся креативные люди. Попробуйте нас удивить\n\t•Умение работать в команде будет плюсом\n\t•Подготовьтсь к провакационным вопросам. Нам важно увидеть вашу реакцию на стрессовые ситуации</string>
    <string name="test_task_activity_title">Назад</string>
    <string name="test_code">public static void main(String[] args) {\n\tInteger x = 9;\n\tx += x++ + ++x;\n\treturn;\n}</string>
    <string name="check_test_task_title">Проверить</string>
    <string name="next_test_task_title">Следующее задание</string>
    <string name="add_vacancy_hint">Добавить вакансию</string>
    <string name="search_vacancies_hint">Поиск вакансий по названию</string>
    <string name="save_vacancy_hint">Сохранить вакансию</string>
    <string name="save_test_task_title">Сохранить</string>
</resources>
