<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="Каким будет значение переменной Х после выполнения кода?"
            />

        <TextView
            android:id="@+id/test_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inconsolata"
            android:text="@string/test_code"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="Варианты ответа:"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorSecondary"
                android:text="27"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorSecondary"
                android:text="29"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorSecondary"
                android:text="30"/>
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorSecondary"
                android:text="57" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_test_task_title"
            style="@style/AppTheme.Buttons"
            android:layout_marginTop="0dp"
            android:onClick="checkAnswer"/>

        <TextView
            android:id="@+id/answer_conclusion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="ВЕРНО!"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="26sp"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/next_test_task_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/next_test_task_title"
            style="@style/AppTheme.Buttons.Link"
            android:onClick="nextTestTask"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>