<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:text="Компания: Akvelon"/>

                <TextView
                    android:id="@+id/company_and_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6sp"
                    android:layout_marginRight="6sp"
                    android:fadingEdge="horizontal"
                    android:fontFamily="Roboto"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="20sp"
                    android:text="(Иваново)"/>

            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:text="01.01.2001"/>

        </LinearLayout>

        <TextView
            android:id="@+id/vacancy_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="Roboto"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/black"
            android:text="Junior developer"/>

        <TextView
            android:id="@+id/employment_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Уровень занятости: Полный день"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Контактные данные:"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:fontFamily="Roboto"
                android:textColor="@android:color/black"
                android:text="@string/telephone_contact_list_item_label"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:autoLink="phone"
                android:fontFamily="Roboto"
                android:textColor="@android:color/black"
                android:text="+7 (900) 000 00 00"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:fontFamily="Roboto"
                android:textColor="@android:color/black"
                android:text="@string/email_contact_list_item_label"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:autoLink="email"
                android:fontFamily="Roboto"
                android:textColor="@android:color/black"
                android:text="akv@out.com"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:text="@string/address_contact_list_item_label"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:autoLink="map"
                android:textIsSelectable="true"
                android:linksClickable="true"
                android:fontFamily="Roboto"
                android:textColor="@android:color/black"
                android:text="153003, г. Иваново, ул. Парижской Коммуны, д. 56"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Отдел: Разработки"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Описание вакансии:"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:textSize="18sp"
            android:text="@string/description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Требования: "/>

        <TextView
            android:id="@+id/requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:textSize="18sp"
            android:text="@string/requirements"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Тестовые задания"/>

        <LinearLayout
            android:id="@+id/tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:textSize="18sp"
                android:text="\t•Каким будет значение переменной Х после выполнения кода?"
                android:drawableEnd="@drawable/ic_failed"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:onClick="openTest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:textSize="18sp"
                android:text="\t•Какого значение ключевого слова volatile?"
                android:drawableEnd="@drawable/ic_passed"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:onClick="openTest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:textSize="18sp"
                android:text="\t•Что будет выведено в результате выполнения кода?"
                android:drawableEnd="@drawable/ic_not_started"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:onClick="openTest" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Roboto"
                android:textSize="18sp"
                android:text="\t•Что будет выведено в результате выполнения кода?"
                android:drawableEnd="@drawable/ic_not_started"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:onClick="openTest" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="Roboto"
            android:textSize="20sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="Советы:"/>

        <TextView
            android:id="@+id/advices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:textSize="18sp"
            android:text="@string/advices"/>

    </LinearLayout>

</ScrollView>
